# file-system-windows-python

./: README.md  pyproject.toml
src/file_system_windows_python/: __init__.py  __main__.py  server.py
src/file_system_windows_python/handlers/: add_note.py  handler.py  list_allowed_directories.py  list_denied_directories.py  ls.py  read_file.py  write_file.py
src/file_system_windows_python/schemas/: ls_arguments.py  path_schema_base.py  write_file_arguments.py
src/file_system_windows_python/tools/: tools.py
src/file_system_windows_python/tools/util/: tool_factory.py  tool_registry.py
src/file_system_windows_python/util/: config.py  logging.py  path_validator.py  result_guard.py
