[project]
name = "file-system-windows-python"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "mcp>=1.0.0",]
[[project.authors]]
name = "Richard-Weiss"
email = "76665424+Richard-Weiss@users.noreply.github.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
file-system-windows-python = "file_system_windows_python:main"
